correcting spacing margins and so on on buttons, fixed projects on homepage

--- a/assets/styles/components/_buttons.sass
+++ b/assets/styles/components/_buttons.sass
@@ -8,8 +8,8 @@ $border: 0.15em
   text-align: center
   // border-radius: 100vh
   border: $border solid
-  margin-top: 0.5em
-  margin-bottom: 0.5em
+  // margin-top: 0.5em
+  // margin-bottom: 0.5em
   white-space: nowrap
   cursor: pointer
   +transition((color, fill, background-color, border, border-color))
