--- a/assets/styles/pages/_post.sass
+++ b/assets/styles/pages/_post.sass
@@ -59,7 +59,9 @@
     > .feature
 
       &__title
-        background-color: color('black-5')
+        
+        +device(desktop)
+          background-color: color('black-5')
 
         > h3
           color: color('aac-gold')
